<resources>
    <string name="app_name">Infinity Crop</string>
    <string name="title_home">Infinity Crop</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_dashboard">Panel de control</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_wellcome_login">¡Te damos la bienvenida!</string>
    <string name="title_orderLog">Inicia sesión</string>
    <string name="title_cont_faceboock">Iniciar sesión con Facebook</string>
    <string name="title_cont_google">Iniciar sesión con Google</string>
    <string name="title_cont_mail">Iniciar sesión con Email</string>

    <string name="title_register">Registrate</string>
    <string name="title_bienv">Hola de nuevo!</string>
    <string name="title_bienvR">¡Hola, es un placer!</string>
    <string name="title_userR">Introduce un correo:</string>
    <string name="title_nameR">Introduce un nombre:</string>
    <string name="title_passwordR">Introduce una contraseña:</string>
    <string name="title_registrar">Acceder</string>
    <string name="btn_newuser">Si no tienes una cuenta, puedes registarte <u>Aquí</u> </string>
    <string name="title_olvidado">He olvidado mi contraseña</string>
    <!-- ANYADIR UNA NUEVA MAQUINA STRINGS -->
    <string name="title_register_machine">Registra una nueva máquina</string>
    <string name="title_infoMachine">Completa estos campos</string>
    <string name="btn_registMachine">Añadir máquina</string>
    <string name="title_name_machine">Introduce el nombre de tu máquina:</string>
    <string name="title_name_model">Modelo de tu máquina:</string>
    <string name="title_name_favorites">Añadir tu máquina a favoritos</string>
    <string name="title_scan_machine">Escanear máquina</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="change_city">Change city</string>

    <!-- Put your own APP ID here -->
    <string name="open_weather_maps_app_id">11111</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="facebook_app_id">140146287567868</string>
    <string name="fb_login_protocol_scheme">fb140146287567868</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- foro -->
    <!-- welcome user -->
    <string name="welcome_text1">Vamos a empezar...</string>
    <string name="welcome_text2">Bienvenido al</string>
    <string name="welcome_text3"> <b>Foro</b> de <i>Infinity Crop</i></string>
    <string name="welcome_text4">Continuar como</string>
    <string name="welcome_text5">Cambiar imagen</string>
    <string name="welcome_text6">Nombre del usuario: </string>
    <string name="welcome_text7">Continuar </string>
    <string name="welcome_text8">Descripción (opcional): </string>ç
    <!-- choose community -->
    <string name="community_text1">Uno más y hemos terminado...</string>
    <string name="community_text2"><b>Tus comunidadades</b></string>
    <string name="community_text3"><b>Lo más popular</b></string>
    <!-- choose community -> bottom Sheet community -->
    <string name="community_sheet_text1">Posts</string>
    <string name="community_sheet_text2">Followers</string>
    <string name="community_sheet_text3">Cancelar</string>
    <string name="community_sheet_text4">Suscribirse</string>
    <string name="community_sheet_text5">Dejar de seguir</string>
    <string name="community_sheet_text6">Finalizar</string>
    <string name="community_sheet_text7">Editar</string>
    <!-- addCommunity  -->
    <string name="editCommunity_text1">Crear communidad</string>
    <string name="editCommunity_text2"><b>Cambiar imagen</b></string>
    <string name="editCommunity_text3">Nombre (obligatorio)</string>
    <string name="editCommunity_text4">Nombre</string>
    <string name="editCommunity_text5">Descripción (opcional)</string>
    <string name="editCommunity_text6">Guardar</string>
    <!-- EditCommunity  -->
    <string name="editCommunity_text7">Editar Communidad</string>
    <string name="editCommunity_text8">Guardar cambios</string>
    <string name="editCommunity_text9">Eliminar comunidad</string>
    <!-- main foro menu  -->
    <string name="menu_foro1">Buscar</string>
    <string name="menu_foro2">Inicio</string>
    <string name="menu_foro3">Suscripciones</string>
    <string name="menu_foro4">Perfil</string>
    <!-- foro home  -->
    <string name="home_foro1"><b>Comunidades que sigues > </b></string>
    <!-- foro home > bottom sheet community  -->
    <string name="home_foro2"><b>Ir a la communidad </b></string>
    <!-- community menu  -->
    <string name="community_menu_foro1">Posts</string>
    <string name="community_menu_foro2">Nuevo post</string>
    <string name="community_menu_foro3">Información</string>
    <!--post fragment -->
    <string name="posts_text1"><b>Posts de la comunidad</b></string>
    <!--post fragment -> new post -->
    <string name="posts_text2"><b>Nuevo post</b></string>
    <string name="posts_text3"><b>Tu galería de posts ></b></string>
    <!--create post -->
    <string name="posts_text4"><b>Título</b></string>
    <string name="posts_text5"><b>Nuevo post</b></string>
    <string name="posts_text6"><b>Descripción</b></string>
    <string name="posts_text7"><b>Elegir clima a añadir al post ></b></string>
    <string name="posts_text8">Cambiar foto</string>
    <string name="posts_text9">Crear clima</string>
    <string name="posts_text10">Crear Post</string>
    <string name="posts_text11">Cancelar</string>
    <!-- Notificaciones -->
    <string name="alerta">data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAkFBMVEX///8jHyAAAAAfGxw/PT0xLi/8/PxMSUodGBoIAAAZFBUcFxgVDxEFAADw8PAfGhsPBwn39/dGQ0SVlJQoJCXc3NylpKQtKSrKycnb29uura3s7Oy5uLgMAATW1dWgnp9ta2t6eHlZV1e+vb04NTZXVVaCgYGNjIxzcXJiYGF4d3dubW2Ih4e0srNmY2TOzs62r3x+AAAJ60lEQVR4nO1dbXuiOhCVoCiCvPjSailqXdzWblv//7+7Vnu3W3MCTBIkPE/O50ozJDlMZs5Mej0LCwsLCwsLCwsLCwsLCwsLIrxosT6uF5HX9kCaQLrevEwTdkE4fdmso7aHpBXLl4LlYez8jzjM2eBl2fawdCHdDFjoOtdwQzaYpW0PTgPSGct5876MzFn3bXwf+ALzLvDv39seohKiDxaXGniaR3boMOccnbDCvk+Ebmcp546JNuD1NN61PVQ5zFgt+z7BZm0PVgYEA7tp4oZi4MnETdsDpuIXzcCTib/aHjIN2YRo4OnLmLU9aBKGY7KF42nbg6ZgRp9Cx5l0iG0WdT70PMJF2wOvjYOcheND2wOvixIedYMgEDs6XeFTby6wYTzJi+F+WOQTAQ+5827EN54TbB87vGefp8E0e/hg2Mbkue3B1wGmmdMh6V8eWXxgr7wTZLND0zMKHq/+7DEO0ETvWhkzCY+IZoIBPzeLATLRfLLxHHSoz9HiW6D96samk81bjiYGH+KXaLrztxuPmIgFijuFW8FfbxEp+atbDpiMA6KZsejUkKGvv9meDaSZifhwu0EeOrumXYOQOmBO4n7JL/qAl1zH3Cjxb8SOApq5AJJN8vtmIyZigYYbfpT+5gORDTPVs9kjmsnLgxMZIt/x/kYjJuId0kxVsPcOko2RyYzoHtDMaFrlonjTEf8z997EXMYbmWYuwGRjoGeDaWZb45fQs2HmeTZDdFLI6yy2CJFNMGx8xEQ8oCmsmVO6g799aHjERKSIZoJKmrnAm4L5N41soDczOdb89RF9MczybNaQZl5r//4Vks26wRFTgZaZ49dfZphsDEpkqNDMBYaTTRRDmiE9A5JNbArZqNHMBUeTj1FryIRPxKe8wtdkBtnABeZSF1jkqi/1hoBphk4S6nTVECL0KZN69/CTE7ZPNk/aPtbYbaDuZ+3QyYE4kEXjZP1AhyZZpzlCqdW2j1F6fREDySaCqTR5iodkw9okmxfNAYgVJJsXjSMmQoJmvPJiC9PIBtLMXLyoos2+GBT7TclfmEU2mGbEwdwZy4M4joO8RE0Kw8ptkU2GNqE4IJ/uvwfP9sL0EkwNhO3oFnGcU5hU2f27xRKh5gKTzbYRCypApJkrzbBYE2wO2cDk5ly0+qKr5KnriOgGp1mL20s0Nih4JE5QcwwiZiRINv7NdeAZis2UKJq4eGFJrBGRjRvfmmz+QKGIOHe7v/50BuIs6IokWWkI1JSYxzkHwVC8s2QTdTpRIJopEWx5w+s86KjEQg/pbNyiCUNEINIM1UKsy7kl2WRjqpaJaCHWVt3Qs4HeTKn4lWrhCv6HrWY7hMA0UypgplrYMtmgbGjslg6YbKGHvrfuvV5DRJhBminX9pItxCUN/k3KavChqUIySbcQ68VvQjaQZpIKJZqEhTQxrkbA1ZNXrR4JC3vPUFDduNLdK5BIq6hShMpYmA4Q2QyaPkbJ0ExPzsJ2yCZD/7RGGYiUhThmw5olG+hN1ahvlbMQi08bVbpLrxs5C2X3hDxSdGiKK2mmJ22h/D+UhPwrlbTw1mQDaaZCqf4FWQvxxm+MbKAfVe+/SVsoS95SgCumZom5tIW48L0ZsoEuRtCvKSGVthA7UYMmyOYZ0cyk5plU3sLeLzSJfgMFw2quvoKFuKymJDQrCzUPSsVCTDbay2pgfK9+UxkVC29TwweV6qOyurufULLQg/Hne71kA7sIEEJfShbKBPeowDRDUIGoWXiDgmGY7woIvpOihRksL9ZINoo001O2sGmy8ZB8dzQgPULRQhiF1tedAEfYSdoBZQsbVbqvkYFJ/YKYTyhbiCV0iR6lOzo0uQ7tiKZuIVU4QIBcee8V1C1sjmxS0CD3dGgiPkWDhb0+OkaF6p4NlihR1z9NqYDRENms0NqQ0LRS1CYiQIXLRNWzgd4MuSDmNLrr54z/kJ+BW6EoejZQWz6RUKpz6g1fQjOKuxMo1fBFc3BukZLscnlVqVwnLLESagDrQA/NnPH081Hk2rYzMNkolNVANavkA735v+8/kOyuh4sD5D0bqFSXLexczL9HF84lA0kR0irJK90f9G7sbPfVS3DMdtJheaiel6G+T1zLei+jU6kMWO5zf+LnOxXhD1pXcUkFRBmeEM34at68t1qv1A51uDuBFDfAckAV3tIEfd0JUGccx2+/DVeK3vxIopqMWhBzO2iq4csgzZjRoQq10qYeyQU0k5tRHn9E0VsqQ2CaMaTFAX79RLIpYBeB9mnmghQdo0Ykpbu5NHOBMtnAZiVaaGaxXC515DahxxzU92zwR1U9EXI3+Ly1KxmoF0wqNjVqKJm1Lr4uDopZofy26G02/wXu86dKM8fke2UFiWo9IYw+1PVsmqGZ6Efc1VXu6KFANrCLgNKh6YwrRYW6YFu+OwEOFKgS4OJatA1bfFOAC4ZrxCiXyCXKlWlmxlmoLDCESb9qCRPu8KcustpyEeGt6iNhw9TqTobwmib1DI+OzAwH3J2gIvkObzHSkKXjLaRnZnhAnVaF6hx3EdAgWG1glUp1hYXejBYdYANM06PdU3AGpBk9wnH9X4tPpAOUVykhG7x19ehxt7q/+GdgpY84QIwaQegq4Ih+XCzj6mqNBPObwhYTUMitTRe/9r8HE2iL+ECyEX7dkPJfY23Davr39NTXJ7pDZCPKoKNQq9ZiOO+hf760uv+g8aEp6rskWHho1+qW/WfLx6XmchC0t3zMNS/8Im2ntw8RYHMJ6BFojVvqz0QDuFXJvUf7IOMNTLpx5yKQaMMGD2v+YMhMv13qAkCR0HPjfdLQlCh+FfjoJ6SaB24OJwZfS/QD79yZD+6vDffpNPCOCQw+Phyidkcbbr8ae2XPNXjXDW6wO34O225wWxe8VArO4SO3mAWegXngKQTuQ/5FBB24UPKMHXdwh5MD7g9tuH2BLoDyPbjBgJNu9kV9fwEcU9y0CmQdqZL8VgB0tS4u6JmBKLnJdxF+AR36xrhJAJSnmtC6vxRYrCjIBSLtpsMOZohoMFYHeAe4KM6Fr5se+7t3Mzk1e9wn8PZrYRoCFk2fEEwYcwamwWFsgpKkTlnUGyZHL3DNg3CsJTefwtao3UPZBwBqOLqGUs0BDD52DeXHWphe6xZKWtqf8dZ1E8NK+d2h21sxKCqTWulQ/MkwHyOnRuQlKrprolsveJZOu7pQx+Oa0UFv2026Sab1/ecNQ+UkZsNlrxRJxbHo2jSGIfWwvgmTDvk3IXulSx+iN8cH2gwD4SbJVi4BkW2mzPiJdEPmPCukH9azgjE/HAdx26dBDnEwDnPGRm9LVc1Wunz4/TGc9k3DdHh4utMte7CwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsGgQ/wHUhaviKpFvdgAAAABJRU5ErkJggg==</string>
    <string name="aviso">https://w7.pngwing.com/pngs/893/420/png-transparent-symbol-computer-icons-unicode-notice-miscellaneous-angle-triangle-thumbnail.png</string>
</resources>