<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentlogr"
    >

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!--<Button
               android:id="@+id/btn_facebook"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/btn_facebook"
               android:drawableLeft="@drawable/ic_facebook_icon"
               android:paddingLeft="20dp"
               android:textColor="#FFFF"
               android:layout_marginLeft="20dp"
               android:layout_marginRight="20dp"
               android:text="@string/title_cont_faceboock" /> -->
        <ImageView
            android:id="@+id/logimg"
            android:layout_width="254dp"
            android:layout_height="146dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="70dp"
            android:contentDescription="@string/title_wellcome_login"
            app:srcCompat="@drawable/logo_and_text" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_facebook"
            android:drawableLeft="@drawable/ic_facebook_icon"
            android:paddingLeft="20dp"
            android:text="@string/title_cont_faceboock"
            android:textColor="#FFFF" />
        <!-- <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />  -->

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_google_icon"
            android:text="@string/title_cont_google"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_mail"
            android:drawableLeft="@drawable/ic_mail_icon"
            android:onClick="Email"
            android:paddingLeft="20dp"
            android:text="@string/title_cont_mail"
            android:textColor="#000000" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>